commit translated contents

--- a/docs/visual-basic/developing-apps/programming/drives-directories-files/toc.yml
+++ b/docs/visual-basic/developing-apps/programming/drives-directories-files/toc.yml
@@ -1,5 +1,5 @@
 - name: 'Elaborazione di unità, directory e file'
-  href: processing.md
+  href: index.md
   items:
     - name: Accesso ai file con Visual Basic
       href: file-access.md
