--- a/docs/framework/wpf/advanced/toc.yml
+++ b/docs/framework/wpf/advanced/toc.yml
@@ -7,7 +7,7 @@
       href: xaml-in-wpf.md
       items:
         - name: Panoramica di XAML (WPF)
-          href: xaml-overview-wpf.md
+          href: ../../../desktop-wpf/fundamentals/xaml.md
         - name: Descrizione dettagliata della sintassi XAML
           href: xaml-syntax-in-detail.md
         - name: Code-behind e XAML in WPF
@@ -290,7 +290,7 @@
       href: resources-wpf.md
       items:
         - name: Risorse XAML
-          href: xaml-resources.md
+          href: ../../../desktop-wpf/fundamentals/xaml-resources-define.md
           items:
             - name: Risorse e codice
               href: resources-and-code.md
