--- a/docs/visual-basic/toc.yml
+++ b/docs/visual-basic/toc.yml
@@ -29,7 +29,7 @@
         - name: Accessing Application Settings
           href: developing-apps/programming/app-settings/index.md
         - name: 'Elaborazione di unità, directory e file'
-          href: developing-apps/programming/drives-directories-files/processing.md
+          href: developing-apps/programming/drives-directories-files/index.md
     - name: Sviluppo con My
       href: developing-apps/development-with-my/index.md
       items:
@@ -1414,6 +1414,6 @@
     - name: Specifiche del linguaggio
       href: reference/language-specification/
 - name: Applicazioni di esempio
-  href: sample-applications.md
+  href: 'https://github.com/dotnet/docs/tree/master/samples/snippets/visualbasic'
 - name: Procedure dettagliate
   href: walkthroughs.md
