--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -20,6 +20,8 @@
       href: install/how-to-detect-installed-versions.md
     - name: Gestione pacchetti Linux
       items:
+        - name: Ubuntu 20.04
+          href: install/linux-package-manager-ubuntu-2004.md
         - name: Ubuntu 19.10
           href: install/linux-package-manager-ubuntu-1910.md
         - name: Ubuntu 19.04
@@ -351,7 +353,7 @@
     - name: Convertire progetti Windows Forms
       href: porting/winforms.md
     - name: Convertire progetti WPF
-      href: porting/wpf.md
+      href: ../desktop-wpf/migration/convert-project-from-net-framework.md
     - name: Convertire progetti C++/CLI
       href: porting/cpp-cli.md
 - name: Unit test
@@ -418,7 +420,7 @@
         - name: Creare un'applicazione .NET Core con i plug-in
           href: tutorials/creating-app-with-plugin-support.md
         - name: Come usare ed eseguire il debug di assembly non caricabili in .NET Core
-          href: ../standard/assembly/unloadability-howto.md
+          href: ../standard/assembly/unloadability.md
 - name: Creazione di pacchetti di distribuzione di .NET Core
   href: distribution-packaging.md
 - name: Esporre componenti di .NET Core a COM
