--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -4,7 +4,7 @@
   href: introduction.md
 - name: Panoramica di .NET Core
   href: about.md
-- name: Installazione di
+- name: Installazione
   items:
     - name: Panoramica
       href: install/index.md
@@ -14,14 +14,14 @@
       href: install/runtime.md
     - name: Sistema operativo e dipendenze supportati
       href: install/dependencies.md
+    - name: Gestire i modelli .NET
+      href: install/templates.md
     - name: Problemi di notarizzazione macOS
       href: install/macos-notarization-issues.md
     - name: Come controllare le versioni di .NET Core
       href: install/how-to-detect-installed-versions.md
     - name: Gestione pacchetti Linux
       items:
-        - name: Ubuntu 20.04
-          href: install/linux-package-manager-ubuntu-2004.md
         - name: Ubuntu 19.10
           href: install/linux-package-manager-ubuntu-1910.md
         - name: Ubuntu 19.04
@@ -68,7 +68,7 @@
       href: whats-new/dotnet-core-2-1.md
     - name: Novità di .NET Core 2.0
       href: whats-new/dotnet-core-2-0.md
-- name: Modifiche che causano un'interruzione
+- name: Modifiche di rilievo
   displayName: app compatibility
   href: compatibility/
 - name: Esercitazioni
@@ -130,7 +130,7 @@
   items:
     - name: Panoramica
       href: project-sdk/overview.md
-    - name: Riferimento
+    - name: Informazioni di riferimento
       items:
         - name: Microsoft.NET.Sdk
           href: project-sdk/msbuild-props.md
@@ -144,7 +144,7 @@
   items:
     - name: Panoramica
       href: tools/index.md
-    - name: Riferimento
+    - name: Informazioni di riferimento
       items:
         - name: dotnet
           href: tools/dotnet.md
@@ -280,7 +280,7 @@
       href: additional-tools/dotnet-svcutil.xmlserializer-guide.md
     - name: Generazione serializzatore XML
       href: additional-tools/xml-serializer-generator.md
-- name: Distribuzione delle applicazioni
+- name: Distribuzione dell'applicazione
   items:
     - name: Panoramica
       href: deploying/index.md
@@ -356,7 +356,7 @@
       href: ../desktop-wpf/migration/convert-project-from-net-framework.md
     - name: Convertire progetti C++/CLI
       href: porting/cpp-cli.md
-- name: Unit test
+- name: Testing unità
   href: testing/index.md
   items:
     - name: Panoramica
