--- a/docs/whats-new/toc.yml
+++ b/docs/whats-new/toc.yml
@@ -4,6 +4,8 @@
   items:
     - name: 2020
       items:
+        - name: April
+          href: dotnet-2020-04.md
         - name: Marzo
           href: dotnet-2020-03.md
         - name: Febbraio
@@ -16,5 +18,3 @@
           href: 2019-12.md
         - name: Novembre
           href: 2019-11.md
-        - name: Ottobre
-          href: 2019-10.md
