--- a/docs/index.yml
+++ b/docs/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: BillWagner
   ms.author: wiwagn
   ms.date: 04/21/2020
-  ms.openlocfilehash: 7680641385e013711e62a8585149ea204e327c95
-  ms.sourcegitcommit: 1cb64b53eb1f253e6a3f53ca9510ef0be1fd06fe
+  ms.openlocfilehash: e1f4da6baefc39281a6dd4a5558d9f961a8f98a5
+  ms.sourcegitcommit: e09dbff13f0b21b569a101f3b3c5efa174aec204
   ms.translationtype: HT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 04/29/2020
-  ms.locfileid: "82507494"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82624930"
 highlightedContent:
   items:
   - title: Scaricare .NET
@@ -98,7 +98,7 @@ conceptualContent:
     - url: core/sdk.md
       itemType: download
       text: Scaricare .NET Core SDK
-    - url: https://dotnet.microsoft.com/download
+    - url: core/tools/index.md
       itemType: overview
       text: Panoramica dell'interfaccia della riga di comando di .NET Core
     - url: core/porting/index.md
@@ -225,8 +225,8 @@ additionalContent:
         text: Librerie di .NET Core IoT
       - url: https://www.nuget.org/packages/System.Device.Gpio
         text: Pacchetto NuGet System.Device.Gpio
-  - title: Sezioni di riferimento API
-    summary: Eseguire una ricerca nella documentazione di riferimento dell'API .NET, con ambito di interesse.
+  - title: Informazioni di riferimento per API e linguaggio
+    summary: Eseguire ricerche nella documentazione per l'API .NET e nella documentazione di riferimento per il linguaggio.
     items:
     - title: Informazioni di riferimento all'API di .NET Core
       summary: Documentazione di riferimento delle API per .NET Core
